[project]
name = "conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
]
